refactor and added new methods to test classes